--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@date-io/core": "^1.3.13",
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.9.4",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.45",
+    "@material-ui/pickers": "^3.2.10",
+    "date-fns": "^2.11.0",
     "i18next": "^19.3.2",
+    "prop-types": "^15.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.3.3",
