--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.45",
     "@material-ui/pickers": "^3.2.10",
+    "@react-google-maps/api": "^1.9.3",
     "date-fns": "^2.11.0",
     "i18next": "^19.3.2",
     "prop-types": "^15.6.0",
