--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "use-places-autocomplete": "^1.3.5"
   }
 }
